--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build-css":"tailwindcss  -i src/style.css -o public/style.css"
+    "build-css": "tailwindcss  -i src/style.css -o public/style.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bootstrap-icons": "^1.10.5",
     "tailwindcss": "^3.3.3"
   }
 }
